# otus-hw5

./: CMakeLists.txt  Controller.cpp  Controller.h  Document.cpp  Document.h  GrCircle.h  GrLine.h  GrObject.h  GrRectangle.h  IDocument.h  Model.cpp  Model.h  README.md  View.cpp  View.h  main.cpp
